✨ upload monster json and backup

--- a/src/public/html/StableStatics.html
+++ b/src/public/html/StableStatics.html
@@ -1,6 +1,6 @@
 <h1>獸廄統計</h1>
 
-<table id="stableStaticsTable" class="w3-table w3-table-all">
+<table id="stableStaticsTable" class="w3-table w3-table-all tableFixHead">
   <thead>
     <tr>
       <th></th>
@@ -22,17 +22,20 @@
   <tfoot>
     <tr>
       <th>合計</th>
-      <td>
-      </td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td id="totalByStar1"></td>
+      <td id="totalByStar2"></td>
+      <td id="totalByStar3"></td>
+      <td id="totalByStar4"></td>
+      <td id="totalByStar5"></td>
+      <td id="totalByStar6"></td>
+      <td id="totalByStar7"></td>
+      <td id="totalByStar8"></td>
+      <td id="totalByStar9"></td>
+      <td id="allMonstersTotal"></td>
     </tr>
   </tfoot>
 </table>
+
+<div id="stableStaticsSaveState" class="w3-padding">
+  已是最新
+</div>
