--- a/src/public/html/MonsterSkills.html
+++ b/src/public/html/MonsterSkills.html
@@ -1,137 +1,13 @@
 <h1>技能統計</h1>
 
-<p class="w3-text-red">
-  <b>尚未實做</b>
-</p>
-
-<p>只統計五星以上，有雙技能</p>
-
-<p>Coming Soon...</p>
+<p>統計五星以上，有雙技能</p>
 
 <table id="monsterSkillsTable" class="w3-table w3-table-all tableFixHead">
   <thead>
     <tr>
-      <th></th>
-      <th>撕裂</th>
-      <th>嘲諷</th>
-      <th>搜索</th>
-      <th>毒擊</th>
-      <th>再生</th>
-      <th>搬運</th>
-      <th>靈巧</th>
-      <th>弱化</th>
-      <th>暈眩</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th>撕裂</th>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th>嘲諷</th>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th>搜索</th>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th>毒擊</th>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th>再生</th>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th>搬運</th>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th>靈巧</th>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th>弱化</th>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th>暈眩</th>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
   </tbody>
   <tfoot></tfoot>
 </table>
