✨ import/export json; 🚸 event order by new to old and 🐛 assign evnet id;

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -28,13 +28,14 @@
   <script src="js/utils/http_request.js"></script>
   <script src="js/common.js"></script>
 
-  <!-- Pages _ Others -->
+  <!-- Pages -->
   <script src="js/pages/history.js" type="text/javascript"></script>
+  <script src="js/pages/home.js" type="text/javascript"></script>
   <script src="js/pages/menu.js" type="text/javascript"></script>
   <script src="js/pages/monsterSkills.js" type="text/javascript"></script>
   <script src="js/pages/stableStatics.js" type="text/javascript"></script>
-  <!-- Pages _ Home -->
-  <script src="js/pages/home.js" type="text/javascript"></script>
+  <!-- Index Page  -->
+  <script src="js/pages/index.js" type="text/javascript"></script>
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="modules/fontawesome-free-5.15.2-web/css/all.min.css">
