💄 add fb and repo link

--- a/src/public/Menu.html
+++ b/src/public/Menu.html
@@ -3,9 +3,12 @@
 
   <div class="w3-container" style="max-width: 500px;">
     <ul class="w3-ul w3-large menu-list">
+      <!-- START Item -->
       <li id="menuHistoryItem" class="w3-hover-light-gray w3-border">
         <div class="w3-bar w3-display-container">
-          <i class="fas fa-history"></i>
+          <span class="left-icon-container">
+            <i class="fas fa-history"></i>
+          </span>
           歷史事件
           <span class="w3-display-right">
             <i class="material-icons">
@@ -14,6 +17,33 @@
           </span>
         </div>
       </li>
+      <!-- END Item -->
+      <!-- START Item -->
+      <li id="menuFacebookItem" class="w3-hover-light-gray w3-border">
+        <div class="w3-bar w3-display-container">
+          <span class="left-icon-container">
+            <i class="fab fa-facebook-square"></i>
+          </span>
+          粉絲專頁
+          <span class="w3-display-right">
+            <i class="fas fa-external-link-alt"></i>
+          </span>
+        </div>
+      </li>
+      <!-- END Item -->
+      <!-- START Item -->
+      <li id="menuGithubRepoItem" class="w3-hover-light-gray w3-border">
+        <div class="w3-bar w3-display-container">
+          <span class="left-icon-container">
+            <i class="fab fa-github" style="color: #302F2F"></i>
+          </span>
+          Github
+          <span class="w3-display-right">
+            <i class="fas fa-external-link-alt"></i>
+          </span>
+        </div>
+      </li>
+      <!-- END Item -->
     </ul>
   </div>
 </div>
