--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,6 +14,7 @@
 
   <link rel="stylesheet" href="css/StableStatics.css">
   <link rel="stylesheet" href="css/History.css">
+  <link rel="stylesheet" href="css/Menu.css">
 
   <script src="js/utils/promise.js"></script>
   <script src="js/utils/http_request.js"></script>
