--- a/src/public/History.html
+++ b/src/public/History.html
@@ -1,5 +1,13 @@
 <div id="historyPage">
-  <h1>歷史事件</h1>
+  <div style="display: flex; flex-direction: row; align-items: center;">
+    <div style="flex: 1;">
+      <h1>歷史事件</h1>
+    </div>
+    <!-- TODO -->
+    <!-- <div id="clearEventsButton" class="w3-button w3-light-gray">
+      清除全部
+    </div> -->
+  </div>
 
   <div class="w3-container">
     <ul id="eventList" class="w3-ul menu-list">
