🎨 refactor: convert to class

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -20,6 +20,10 @@
   <script src="js/utils/http_request.js"></script>
   <script src="js/common.js"></script>
 
+  <!-- Services -->
+  <script src="js/services/EventService.js"></script>
+  <script src="js/services/MonsterService.js"></script>
+
   <!-- Local File Env -->
   <script src="js/for_static_env/pages/history.js"></script>
   <script src="js/for_static_env/pages/home.js"></script>
