--- a/src/public/Home.html
+++ b/src/public/Home.html
@@ -1,5 +1,8 @@
 <div id="homePage">
-  <h1>首頁</h1>
+  <h1>
+    首頁
+    <span id="versionLabel" style="font-size: 20px; color: lightgray;"></span>
+  </h1>
 
   <input id='monstersJsonFileInput' hidden type="file" accept=".json," onChange={this.onSitesFileChange} />
   <button id="importMonstersJsonButton" class="w3-button w3-blue w3-hover-light-blue">
