--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,6 +6,72 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sdorica</title>
 
+<!-- 
+
+  普吉 ANSC II Art
+    
+                          來自 
+                                  
+                                          https://www.sdorica.com/zh/
+
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMNdyo+/////sMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMNs/---:/::.-odMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMm.     .+++-`` `.:sMhdNMMMMMNmmddddmNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMm.    .o/`          m/  `+h.`         `.-:+oyhmNMMMMMMMMMMMMMMNohMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMm.    +s`            N:    o                      .:+shmMMMMMMMM. `+mMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMM:    o/             /y     `                            `-+hMMMMh    -sNMMMMMMMMMMMMMM
+MMMMMMMMMMMMMM-   `-             .h`             .:::--:-/dNd.            `+myhys+////hMMMMMMMMMMMMM
+MMMMMMMMMMMMMMy                 `h`           -//-       `syso:`     /dh-   .o`  ./+.  .yMMMMMMMMMMM
+MMMMMMMMMMMMMMM-               .o`          `o:               `:/..///yy:--::`s:    :o-  .dMMMMMMMMM
+MMMMMMMMMMMMMMMm.              .           .y`    /yddmdy/       --          .-y/     +o   yMMMMMMMM
+MMMMMMMMMMMMMMMMN/                        .h`   -mMMMMMMMMm.             -/-   `d-     /-   dMMMMMMM
+MMMMMMMMMMMMMMMMMMh.                      y`   `NMMMMMMMMMMd           :NMMMm-  :d      -   -MMMMMMM
+MMMMMMMMMMMMMMMMMMMMy-                   /:    :MMMMMMMMMMMN          .NMMMMMd   N`          NMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMmo-                o     `dMMMMMMMMMMo          sMMMMMMN   d.         `MMMMMMM
+MMMMMMMMMMd+NMMMMMMMMMMMMms:`           .`      `omMMMMMMm/      `-   +MMMMMMy   h-         sMMMMMMM
+MMMMMMMMMMm+oMMMMMMMMMMMMMMMs                      -/+++.   `syhmMMh/-`+mMMMh`   y:        :MMMMMMMM
+MMMMMmMMMMMMMMMMMMMMMMMMMMMM-                                 .:+ssso/.          h/       /NMMMMMMMM
+MMMM+ -hMMMMMMMMMMMMMMMMMMMy                                                     d-     :dMMMMMMMMMM
+MMMMm/``:dMMMMMMMMMMMMMMMMm`                                                     m-.:+hNMMMMMMMMMMMM
+MMMMMMMMMMMMMMs/+ossso+/-`                                                       NMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMNo.                           :+//-.                               dMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMs--`                          /ho/++.``..-/+:          `   `-:/:.   `:oyhyo/dMMMMMMMMM
+MMMMMMMMMMMMMMMms/-                           ```.-::::-``m/`        /hoooo+sy`          +MMMMMMMMMM
+MMMMMMMMMMMMMMN.                                          `/ossoooo+//.               .+mMMMMMMMMMMM
+MMMMMMMMMMMMMMMNo`                                                      ./``:ss  `/shNMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMmyo///+++:                                           `d-+o--m  /MMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMd-                                                /s    -dhhhMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMs.                                                 oo     `osmMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMNdo-                                             oo    oy-/MMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMh:                                           /d   h+-hMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMmo.                                         dh omyMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMy`                          `..-..`    `./MhhMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMm:`                     `-/shmMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMms`       +o++++oossshmMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMN:       :MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMNNmh  :yMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMhdMMMMMMMMMMMMMMMMMMMMMMMMM+HOW MANY PUGGIS ARE THERE?+MMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM+http://short.rayark.com/sdoricaEgg +MM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM 
+//-->
+
+  <!--  
+                           ██████╗    ███████╗    ███████╗
+                          ██╔════╝    ██╔════╝    ██╔════╝
+                          ██║         ███████╗    ███████╗
+                          ██║         ╚════██║    ╚════██║
+                          ╚██████╗    ███████║    ███████║
+                           ╚═════╝    ╚══════╝    ╚══════╝
+ generated: https://www.patorjk.com/software/taag/#p=display&f=ANSI%20Shadow&t=C%20S%20S
+ -->
+
   <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/style.css">
@@ -16,13 +82,30 @@
   <link rel="stylesheet" href="css/History.css">
   <link rel="stylesheet" href="css/Menu.css">
 
+<!-- 
+                                  ██╗    ███████╗
+                                  ██║    ██╔════╝
+                                  ██║    ███████╗
+                             ██   ██║    ╚════██║
+                             ╚█████╔╝    ███████║
+                              ╚════╝     ╚══════╝
+generated: https://www.patorjk.com/software/taag/#p=display&f=ANSI%20Shadow&t=j%20s
+ -->
+
+
+  <!-- Utils: (dont depend on any others) -->
   <script src="js/utils/promise.js"></script>
   <script src="js/utils/http_request.js"></script>
+
+  <!-- Base -->
   <script src="js/common.js"></script>
 
   <!-- Services -->
   <script src="js/services/EventService.js"></script>
   <script src="js/services/MonsterService.js"></script>
+
+  <!-- Version Updater -->
+  <script src="js/version_updater/version_updater.js"></script>
 
   <!-- Local File Env -->
   <script src="js/for_static_env/pages/history.js"></script>
@@ -54,14 +137,17 @@
     <div id="navMonsterSkillsButton" class="w3-bar-item w3-button w3-hover-blue w3-mobile">技能統計</div>
     <div id="navMenuButton" class="w3-bar-item w3-button w3-right">選單</div>
   </div>
+
   <div 
     id="mainContentContainer"
-    class="w3-container"
-  >
+    class="w3-container">
+    <!-- Here for replace -->
   </div>
+
   <div id="loadingContent">
     Loading
   </div>
+  
   <footer>
     <!-- TODO -->
     <!-- <i class="fab fa-github" style="color: #302F2F"></i> -->
