💬 add info of skills page

--- a/src/public/MonsterSkills.html
+++ b/src/public/MonsterSkills.html
@@ -2,6 +2,10 @@
 
 <p>統計五星以上，有雙技能</p>
 
+<ul>
+  <li>左邊直欄為主要技能，上面橫列為次要技能</li>
+</ul>
+
 <table id="monsterSkillsTable" class="w3-table w3-table-all tableFixHead">
   <thead>
     <tr>
