✨ add monster list page and maintain monster page; 🚧 create/update monster

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -107,19 +107,24 @@ generated: https://www.patorjk.com/software/taag/#p=display&f=ANSI%20Shadow&t=j%
   <!-- Version Updater -->
   <script src="js/version_updater/version_updater.js"></script>
 
-  <!-- Local File Env -->
+  <!-- Static Env: Pages -->
+  <script src="js/for_static_env/pages/maintainMonster.js"></script>
   <script src="js/for_static_env/pages/history.js"></script>
   <script src="js/for_static_env/pages/home.js"></script>
   <script src="js/for_static_env/pages/menu.js"></script>
+  <script src="js/for_static_env/pages/monsterList.js"></script>
   <script src="js/for_static_env/pages/monsterSkills.js"></script>
   <script src="js/for_static_env/pages/stableStatics.js"></script>
+  <!-- Static Env: Others -->
   <script src="js/for_static_env/utils.js"></script>
   <script src="js/for_static_env/data_monster.js"></script>
 
   <!-- Pages -->
+  <script src="js/pages/maintainMonster.js" type="text/javascript"></script>
   <script src="js/pages/history.js" type="text/javascript"></script>
   <script src="js/pages/home.js" type="text/javascript"></script>
   <script src="js/pages/menu.js" type="text/javascript"></script>
+  <script src="js/pages/monsterList.js" type="text/javascript"></script>
   <script src="js/pages/monsterSkills.js" type="text/javascript"></script>
   <script src="js/pages/stableStatics.js" type="text/javascript"></script>
   <!-- Index Page  -->
