--- a/src/public/index.html
+++ b/src/public/index.html
@@ -97,6 +97,9 @@ generated: https://www.patorjk.com/software/taag/#p=display&f=ANSI%20Shadow&t=j%
   <script src="js/utils/promise.js"></script>
   <script src="js/utils/http_request.js"></script>
 
+  <!-- Utility: (dont depend on any others) -->
+  <script src="js/utilities/StringUtility.js"></script>
+
   <!-- Base -->
   <script src="js/common.js"></script>
 
