--- a/src/public/index.html
+++ b/src/public/index.html
@@ -107,6 +107,8 @@ generated: https://www.patorjk.com/software/taag/#p=display&f=ANSI%20Shadow&t=j%
   <script src="js/services/EventService.js"></script>
   <script src="js/services/MonsterService.js"></script>
 
+  <!-- Version Update Scripts -->
+  <script src="js/version_updater/scripts/v1_1_0_code_2.js"></script>
   <!-- Version Updater -->
   <script src="js/version_updater/version_updater.js"></script>
 
